--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
@@ -28,8 +28,8 @@ jobs:
         run: |
           pyinstaller --onefile --windowed ap_random_yaml_gui.py
 
-      - name: Upload EXE to workflow artifacts
-        uses: actions/upload-artifact@v3
+      - name: Upload EXE artifact
+        uses: actions/upload-artifact@v4
         with:
           name: Archipelago-YAML-Combiner
           path: dist/ap_random_yaml_gui.exe
