--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,10 +26,10 @@ jobs:
 
       - name: Build EXE
         run: |
-          pyinstaller --onefile --windowed ap_random_yaml_gui.py
+          pyinstaller --onefile --windowed ap_yaml_combiner.py
 
       - name: Upload EXE artifact
         uses: actions/upload-artifact@v4
         with:
           name: Archipelago-YAML-Combiner
-          path: dist/ap_random_yaml_gui.exe
+          path: dist/ap_yaml_combiner.exe
