--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,17 +26,17 @@ jobs:
 
       - name: Build EXE
         run: |
-          pyinstaller --onefile --windowed ap_random_yaml_gui.py
+          pyinstaller --onefile --windowed ap_yaml_combiner.py
 
       - name: Upload EXE to workflow artifacts
         uses: actions/upload-artifact@v4
         with:
           name: Archipelago-YAML-Combiner
-          path: dist/ap_random_yaml_gui.exe
+          path: dist/ap_yaml_combiner.exe
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: dist/ap_random_yaml_gui.exe
+          files: dist/ap_yaml_combiner.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
